--- a/public/Kanbas/Courses/Home/index.css
+++ b/public/Kanbas/Courses/Home/index.css
@@ -87,10 +87,6 @@ a {
     border: none;
 }
 
-#module1 div.list-group-item {
-    border: 0.5px solid gray !important;
-
-}
 
 .profileHeader {
     padding: 12px 0 0 0;
@@ -100,3 +96,39 @@ a {
     font-weight: normal;
     font-size: 1.5em;
 }
+
+#module1 .list-group-item {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-left:none;
+    border-right:none;
+    border-bottom: 0.0625rem solid #C7CDD1;
+    border-left: 2px solid green;
+    border-right: 0.0625rem solid #C7CDD1;
+}
+
+a.list-group-item {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 19px;
+    padding-right: 19px;
+}
+
+a.list-group-item.list-group-item-secondary {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 1px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.pill-border {
+    display: inline-block;
+    margin: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-right: 10px;
+    list-style: none;
+    border-radius: 1em;
+    border: 1px solid rgba(0,0,0,.25);
+  }
